@startuml

title __AULA03's Class Diagram__\n

  package aula03 {
    class ErrorStreet {
        {static} + nonExistDoorError()
        {static} + doorsIntervalError()
        {static} + memberNameError()
    }
  }
  

  package aula03 {
    class JGalo {
        {static} - serialVersionUID : long
        - jPanel : JPanel
        - bt : JToggleButton[]
        + JGalo()
        + actionPerformed()
        {static} + main()
    }
  }
  

  package aula03 {
    class JGaloController {
        {static} - PLAYERS_IDENTIFIERS : char[]
        - board : int[][]
        - current_player : int
        - count_plays : int
        - winner : int
        + JGaloController()
        + getActualPlayer()
        + setJogada()
        + isFinished()
        + checkResult()
        - checkIfWinner()
        - checkHaveMorePlays()
    }
  }
  

  package aula03 {
    interface JGaloInterface {
        {abstract} + getActualPlayer()
        {abstract} + setJogada()
        {abstract} + isFinished()
        {abstract} + checkResult()
    }
  }
  

  package aula03 {
    class Member {
        - name : String
        - num_initial : int
        - num_final : int
        - Member()
        {static} + factory()
        + getName()
        + getNum_initial()
        + getNum_final()
        {static} - checkNames()
        + toString()
    }
  }
  

  package aula03 {
    class MemberNameComparator {
        + compare()
    }
  }
  

  package aula03 {
    class MemberSetComparator {
        + compare()
    }
  }
  

  package aula03 {
    class StreetMap {
        - doors : List<TreeSet<Member>>
        + StreetMap()
        + add()
        + addAll()
        - increaseStreetSize()
        + getDoors()
        + getInDoor()
        + toString()
    }
  }
  

  package aula03 {
    class lab3 {
        {static} - MIN_NUMBER_DOOR : int
        {static} ~ input : Scanner
        {static} + main()
        {static} - menu()
        {static} - readFileLines()
        {static} - getFamilies()
        {static} - map()
        {static} - list()
        {static} - addMember()
        {static} - removeMember()
        {static} - lookUp()
        {static} - clearStreet()
        {static} - checkDoors()
        {static} - setContainsMember()
        {static} - generateWhiteString()
        {static} - checkIfMember()
        {static} - isInteger()
        {static} - verifySizeOption()
    }
  }
  

  JGalo -up-|> ActionListener
  JGalo -up-|> JFrame
  JGalo o-- JGaloInterface : jogo
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  WakingRunnable -up-|> Runnable
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  DummyRequestFocusController -up-|> RequestFocusController
  SingleBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  BltBufferStrategy -up-|> BufferStrategy
  FlipBufferStrategy -up-|> BufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  JGaloController -up-|> JGaloInterface
  MemberNameComparator -up-|> Comparator
  MemberSetComparator -up-|> Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
